fix: align connection ports and lines to node border center

--- a/frontend/src/components/workflow/WorkflowNodeCard.module.css
+++ b/frontend/src/components/workflow/WorkflowNodeCard.module.css
@@ -81,7 +81,7 @@
   position: absolute;
   left: -5px;
   top: 0;
-  height: 100%;
+  height: 120px;
   width: 0;
 }
 
@@ -89,7 +89,7 @@
   position: absolute;
   left: calc(100% - 5px);
   top: 0;
-  height: 100%;
+  height: 120px;
   width: 0;
 }
 
